# ColaRepo

./: .gitignore  readme.md
proj_hpc/: cola_utils.cpp  cola_utils.h  evaluation.cpp  evaluation.h  exp_evaluation.cpp  interpolation.h  interpolation_cpu.cpp  interpolation_gpu.cu  main.cpp  readme.md  setup.py  vis.ipynb
study_cmake_pytorch_extesion_cuda/: CMakeLists.txt  README.md  main.cu  test.py
study_libtorch/: CMakeLists.txt  readme.md
study_pybind11/: CMakeLists.txt  readme.md  setup.py
study_pybind11/src_exp_function/: CMakeLists.txt  module.cpp
study_pybind_eigen_numpy/: CMakeLists.txt  readme.md  setup.py  test.py
study_pybind_eigen_numpy/Assets/: gss_dst.npy  gss_src.npy
study_pybind_eigen_numpy/src_calc_gss_same_matrix/: CMakeLists.txt  calc_gss_same_matrix.cpp  calc_gss_same_matrix.hpp  export_pybind.cpp  main.cpp
study_pytorch_cmake/: CMakeLists.txt
study_pytorch_cuda_extension/: interpolation.cpp  interpolation_kernel.cu  interpolation_kernel.cuh  readme.md  setup.py  setup_cpp.py  test_cu_bw.py  test_cu_fw.py
study_pytorch_cuda_extension/cppcuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
study_pytorch_cuda_extension/cppcuda_tutorial.egg-info/: PKG-INFO
study_pytorch_cuda_extension_framework/V1PytorchCPP/: func.cpp  readme.md  setup.py  test.py
study_pytorch_cuda_extension_framework/V1PytorchCPP/cpptorch.egg-info/: SOURCES.txt
study_pytorch_cuda_extension_framework/V2CUDAPytorch/: CMakeLists.txt  func.cpp  func_kernel.cu  main.cu  readme.md  setup.py  test.py
study_pytorch_cuda_extension_framework/V2CUDAPytorch/build_/: CMakeCache.txt
study_pytorch_cuda_extension_framework/V2CUDAPytorch/cppcudapytorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
study_pytorch_cuda_extension_framework/V2CUDAPytorch/cpptorch.egg-info/: PKG-INFO  top_level.txt
study_pytorch_cuda_extension_framework/V2CUDAPytorch/include/: func_kernel.cuh
study_taichi/neighborhoodSearch/: README.md  main.py  neighborhood_search.py  neighbors.txt  num_neighbors.txt  radiu_search.py
study_taichi/neighborhoodSearch/utils/: Timer.py
